# Matins_The_Evolving_Agent

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  algo-upgrade-plan.md  config.example.yaml  pyproject.toml  sandbox.config.example.yaml
matins/: __init__.py  __main__.py  cli.py  config.py  news.py
matins/digest/: __init__.py  render.py
matins/feedback/: __init__.py  capture.py  diverge.py
matins/generate/: __init__.py  deepdive.py  explore.py  lens.py  novelty.py  pipeline.py  saturation.py  schema.py  slots.py  verify.py
matins/memory/: __init__.py  backtest.py  consolidate.py  evolve.py  kernels.py
matins/providers/: __init__.py  anthropic.py  base.py  openai.py  openai_compatible.py  search_web.py
matins/providers/messaging/: __init__.py  base.py  telegram.py  whatsapp_baileys.py  whatsapp_cloud.py
matins/store/: __init__.py  db.py  models.py
prompts/: deepdive_brief.txt  deepdive_queries.txt  genes.yaml  interest_seed.example.md  interest_seed.md  lenses.yaml  predict_rank.txt  propose_dimension.txt  propose_skill_diff.txt  saturation_judge.txt  self_rank.txt  slot_adjacent.txt  slot_highfit.txt  slot_orthogonal.txt  slot_random.txt  summarize_recent.txt
skills/: taste.md
tests/: test_backtest.py  test_config.py  test_db.py  test_deepdive.py  test_digest.py  test_evolve.py  test_explore.py  test_favorites.py  test_feedback.py  test_kernels.py  test_lens.py  test_news.py  test_pipeline.py  test_providers.py  test_schema.py  test_slots.py  test_telegram.py  test_verify.py
