[project]
name = "matins"
version = "0.1.0"
description = "A daily human-AI brainstorm loop: four research ideas each morning, learning your taste over months."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matins contributors" }]
keywords = ["research", "ideation", "llm", "human-in-the-loop", "taste"]
dependencies = [
  "httpx>=0.27",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
matins = "matins.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["matins*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
